--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ ffmpeg-python>=0.2.0
 translate>=3.6.1
 gtts>=2.5.1
 pysrt>=1.1.2
-pydub>=0.25.1
 moviepy>=1.0.3
-pytube>=15.0.0
+openai-whisper>=20231117
+soundfile>=0.12.1
+librosa>=0.10.1
