--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit>=1.28.0
 faster-whisper>=0.9.0
-ffmpeg-python>=0.2.0
 translate>=3.6.1
 gtts>=2.5.1
 pysrt>=1.1.2
 openai-whisper>=20231117
+moviepy>=1.0.3
+pydub>=0.25.1
