--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
 streamlit>=1.28.0
 faster-whisper>=0.9.0
-openai-whisper>=20231117
+ffmpeg-python>=0.2.0
 translate>=3.6.1
-gtts>=2.5.1
+gtts>=2.3.2
 pysrt>=1.1.2
-moviepy>=1.0.3
 pydub>=0.25.1
-torch>=2.0.0
-torchaudio>=2.0.0
-librosa>=0.10.0
-soundfile>=0.12.1
+moviepy>=1.0.3
+openai-whisper>=20231117
+pytube>=15.0.0
