--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,5 @@ translate>=3.6.1
 gtts>=2.3.2
 pysrt>=1.1.2
 pydub>=0.25.1
-moviepy==2.2.1
 openai-whisper>=20231117
-pytube>=15.0.0
+requests>=2.31.0
