--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
 streamlit>=1.28.0
+faster-whisper>=0.9.0
 ffmpeg-python>=0.2.0
+translate>=3.6.1
+gtts>=2.3.2
+pysrt>=1.1.2
+pydub>=0.25.1
+moviepy>=1.0.3
+pandas>=1.5.0
+numpy>=1.21.0
